# Sistema-predictivo-back

./: Dockerfile.prod  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  justfile  logging.ini  logging_production.ini  pyproject.toml  requirements.txt  ruff.toml
alembic/: env.py
entrypoints/: gunicorn.sh
gunicorn/: gunicorn_conf.py
ml_model/: data_cleaning.py  df.csv  dfmodel.csv  model.py  notebook.ipynb
ml_model/data/: dbf_loader.py  mproducto.csv  mstockalm.csv  tformdet.csv
ml_model/data/dbf/2021/: MPRODUCTO.DBF  MSTOCKALM.DBF  MUSUARIO.DBF  TFORMDET.DBF
ml_model/data/dbf/2022/: MPRODUCTO.DBF  MSTOCKALM.DBF  MUSUARIO.DBF  TFORMDET.DBF
ml_model/data/dbf/2023/: MPRODUCTO.DBF  MSTOCKALM.DBF  MUSUARIO.DBF  TFORMDET.DBF
ml_model/data/dbf/2024/: MPRODUCTO.DBF  MSTOCKALM.DBF  MUSUARIO.DBF  TFORMDET.DBF
ml_model/data/models/: model_xgboost.pkl
scripts/postgres/: backup  restore
src/: config.py  constants.py  database.py  exceptions.py  main.py  routes.py  schemas.py  utils.py
src/auth/: router.py
src/data/: router.py  schemas.py
